--- a/web/templates/pages/login.html
+++ b/web/templates/pages/login.html
@@ -3,28 +3,65 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/static/style/main.css">
+	<link rel="stylesheet" href="/home/student/Documents/Z01/Projects/Forum/web/static/style/login.css">
 </head>
 <body>
-	{{ template "header" . }}
-	<main>
-		<h1>Login</h1>
-		<form method="post" action="/login" >
-			<div>
-				<label for="username">Username or Email</label>
-				<input type="text" id="username" name="username" required>
-			</div>
-			<div>
-				<label for="password">Password</label>
-				<input type="password" id="password" name="password" required>
-			</div>
-			<button type="submit">Login</button>
-		</form>
-		<p>Don't have an account? <a href="/register">Register</a></p>
-	</main>
-
-	<footer>
-		<p>&copy; 2024 Forum. All rights reserved.</p>
-	</footer>
+	<!-- {{/* template "header" . */}} !-->
+		<div class="login-page">
+				<div class="global-login">
+					<div class="forum-logo">
+						<img src="../../src/image/logo0.png" alt="">
+					</div>
+					<div class="all-login">
+						<div class="login-with">
+							<div class="social-login">
+								<div class="login-with-facebook">
+									<img class="facebook-login-logo" src="../../src/image/facebook1.svg" alt="">
+									<button class="login-with-button"> Log In With Facebook</button>
+								</div>
+							</div>
+							<div class="social-login">
+								<div class="login-with-google">
+									<img class="google-login-logo" src="../../src/image/google3.svg" alt="">
+									<button class="login-with-button"> Log In With Google</button>
+								</div>
+							</div>
+							<div class="social-login">
+								<div class="login-with-instagram">
+									<img class="instagram-login-logo" src="../../src/image/instagram1.svg" alt="">
+									<button class="login-with-button"> Log In With Instagram</button>
+								</div>
+							</div>
+							<div class="social-login">
+								<div class="login-with-github">
+									<img class="github-login-logo" src="../../src/image/github-10.png" alt="">
+									<button class="login-with-button"> Log In With Github</button>
+								</div>	
+							</div>
+						</div>
+						<div class="login-manually">
+							<div class="login-form-field">
+								<form method="post" action="/login" >
+									<div class="login-username-email">
+										<label class="login-username-email" for="username"></label>
+										<input type="text" id="username" name="username" placeholder="Username or Email" required>
+									</div>
+									<div class="login-password">
+										<label class="login-password" for="password"></label>
+										<input type="password" id="password" name="password" placeholder="Password" required>
+									</div>
+									<button class="login-button" type="submit">Login</button>
+								</form>
+								<div class="login-register">
+									<p>Don't have an account? <a href="/register">Register now</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			<footer>
+				<p>&copy; 2024 Forum. All rights reserved.</p>
+			</footer>
+		</div>
 </body>
 </html>
