--- a/web/static/style/register.css
+++ b/web/static/style/register.css
@@ -4,53 +4,49 @@
     padding: 0;
 }
 
-body{
-    height: 100vh;
-}
-
-.login-page {
+.register-page {
     background-color:rgba(244, 242, 238, 1);
     display: flex;
     flex-direction: column;
 }
 
-.global-login {
+.global-register{
     background-color: white;
     display: flex;
     flex-direction: column;
     align-self: center;
     width: 1260px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     border-radius: 15px;
 }
 
 .forum-logo{
     align-self: center;
     padding-top: 30px;
-    padding-bottom: 80px;
+    padding-bottom: 60px;
 }
 
-.all-login {
+.all-register{
     align-self: center;
     display: flex;
+    flex-direction: column;
     padding-bottom: 35px;
 }
 
 .login-with {
     background: var(--2cd-background-color, #f4f4f4);
     border-radius: 15px;
-    width: 570px;
-    height: 605px;
-    padding: 80px;
+    width: 1000px;
+    height: 100px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .social-login {
     border: 3px solid white;
     border-radius: 15px;
-    margin-bottom: 5%;
 }
 
 .login-with-facebook, .login-with-google, .login-with-instagram, .login-with-github{
@@ -64,41 +60,41 @@ body{
 
 .facebook-login-logo {
     border-radius: 15px;
-    border: 1 px solid blue;
-    width: 80px;
-    height: 81.09px;
+    width: 50px;
+    height: 60px;
 }
 
 .google-login-logo {
     border-radius: 15px;
     margin-right: 4px;
     border: 1px solid red;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 60px;
 }
 
 .instagram-login-logo {
     border-radius: 15px;
-    width: 80px;
-    height: 81.09px;
+    width: 50px;
+    height: 60px;
 }
 
 .github-login-logo {
     border-radius: 0px;
-    width: 80px;
-    height: 81.09px;
+    width: 50px;
+    height: 60px;
 }
 
 .login-with-button {
     background-color: white;
     border: none;
     border-radius: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
     color: #000000;
     font-family: "Inter-SemiBoldItalic", sans-serif;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 600;
     font-style: italic;
-    flex-grow: 2;
     transition-duration: 0.4s;
 }
 
@@ -106,22 +102,28 @@ body{
     background-color: rgba(235, 221, 221, 0.959);
 }
 
-.login-manually {
+.register {
     background: var(--navbar-color, #ffffff);
     border-radius: 15px;
     border-style: solid;
     border-color: #e6e6e6;
     border-width: 1px;
-    width: 564px;
-    height: 605px;
+    width: 1000px;
+    height: 445px;
+    margin-top: 15px;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
 }
 
-.login-form-field {
+.register-form-field {
     width: 509px;
     height: 605px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
+    align-self: center;
 }
 
 form {
@@ -133,45 +135,45 @@ form {
     align-items: center;
 }
 
+.register-input {
+    margin-bottom: 20px;
+}
+
 input{
     width: 509px;
     height: 38px;
     border-radius: 5px;
-    border-width: 2.5px;
+    border-width: 0.5px;
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
 }
 
-input[type=text]:focus, input[type=password]:focus{
+input[type=text]:focus, input[type=password]:focus, input[type=email]:focus{
     outline: none;
     box-shadow: 0 0 0 2px blue;
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
 }
 
 ::placeholder {
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
 }
 
 input:focus::placeholder{
     color: transparent;
 }
 
-.login-button {
-    width: 80px;
-    height: 35px;
+.register-button {
+    width: 100px;
     border-radius: 5px;
-    font-size: 20px;
+    padding: 5px;
+    font-size: 17px;
 }
 
-.login-button:hover{
+.register-button:hover{
     background-color: blueviolet;
     color: white;
-}
-
-.login-register {
-    align-self: center;
 }
 
 footer{
