--- a/web/templates/pages/register.html
+++ b/web/templates/pages/register.html
@@ -3,37 +3,37 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../static/style/register.css">
+	<link rel="stylesheet" href="/web/static/style/register.css">
 </head>
 <body>
 	<div class="register-page">
 		<div class="global-register">
 			<div class="forum-logo">
-				<img src="../../src/image/logo0.png" alt="">
+				<img src="/web/src/image/logo0.png" alt="">
 			</div>
 			<div class="all-register">
 				<div class="login-with">
 					<div class="social-login">
 						<div class="login-with-facebook">
-							<img class="facebook-login-logo" src="../../src/image/facebook1.svg" alt="">
+							<img class="facebook-login-logo" src="/web/src/image/facebook1.svg" alt="">
 							<button class="login-with-button"> Log In With Facebook</button>
 						</div>
 					</div>
 					<div class="social-login">
 						<div class="login-with-google">
-							<img class="google-login-logo" src="../../src/image/google3.svg" alt="">
+							<img class="google-login-logo" src="/web/src/image/google3.svg" alt="">
 							<button class="login-with-button"> Log In With Google</button>
 						</div>
 					</div>
 					<div class="social-login">
 						<div class="login-with-instagram">
-							<img class="instagram-login-logo" src="../../src/image/instagram1.svg" alt="">
+							<img class="instagram-login-logo" src="/web/src/image/instagram1.svg" alt="">
 							<button class="login-with-button"> Log In With Instagram</button>
 						</div>
 					</div>
 					<div class="social-login">
 						<div class="login-with-github">
-							<img class="github-login-logo" src="../../src/image/github-10.png" alt="">
+							<img class="github-login-logo" src="/web/src/image/github-10.png" alt="">
 							<button class="login-with-button"> Log In With Github</button>
 						</div>	
 					</div>
