--- a/web/templates/layout/header.html
+++ b/web/templates/layout/header.html
@@ -9,7 +9,7 @@
 				<input type="text" placeholder="Search...">
 			</div>
 			<a href="">
-				<img src="/web/src/image/darkvador-1.png" alt="Profile picture">
+				<img src="" alt="Profile picture">
 			</a>
 			<div class="chat">
 
