--- a/web/templates/pages/home.html
+++ b/web/templates/pages/home.html
@@ -3,13 +3,46 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/static/style/main.css">
+	<link rel="stylesheet" href="/web/static/style/main.css">
 </head>
 <body>
 	{{ template "header" . }}
-	<main>
+	<div class="home-page">
 		{{ if .Session }}
-			<a href="/post/create">Create post</a>
+		<div class="logged-navbar">
+			<div class="nav">
+				<div class="navbar-button">
+					<a href="">
+						<button>Home</button>
+					</a>
+				</div>
+				<div class="navbar-button">
+					<a href="">
+						<button>Favs</button>
+					</a>
+				</div>
+				<div class="navbar-button">
+					<a href="">
+						<button>Category</button>
+					</a>
+				</div>
+				<div class="navbar-button">
+					<a href="">
+						<button>Tags</button>
+					</a>
+				</div>
+				<div class="navbar-button">
+					<a href="/post/create">
+						<button>Create Post</button>
+					</a>
+				</div>
+			</div>
+			<div class="logout-button">
+				<a href="/logout">
+					<button>Log out</button>
+				</a>
+			</div>
+		</div>
 		{{ end }}
 		<h2>Latest Posts</h2>
 		<div id="posts">
@@ -24,7 +57,7 @@
 				</div>
 			{{end}}
 		</div>
-	</main>
+	</div>
 	<footer>
 		<p>&copy; 2024 Forum. All rights reserved.</p>
 	</footer>
