--- a/web/templates/layout/header.html
+++ b/web/templates/layout/header.html
@@ -1,21 +1,32 @@
 {{ define "header" }}
 	<header>
-		<a href="/">
+		<a class="forum-logo" href="/">
 			<img src="/web/src/image/logo0.png" alt="Forum logo">
 		</a>
-		<a href="/">Home</a>
 		{{ if .Session }}
-			<div class="logged-searchbar">
-				<input type="text" placeholder="Search...">
-			</div>
-			<a href="">
-				<img src="/web/src/image/darkvador-1.png" alt="Profile picture">
-			</a>
-			<div class="chat">
-
-			</div>
-			<div class="notifications">
-
+			<div class="whole-header">
+				<div class="logged-searchbar">
+					<img class="burgermenu" src="/web/src/image/burgermenu.svg" alt="">
+					<input type="text" placeholder="Search...">
+					<img class="spyglass" src="/web/src/image/spyglass.svg" alt="search">
+				</div>
+				<div class="header-options">
+					<div class="user-picture">
+						<a href="">
+							<img src="/web/src/image/darkvador-1.png" alt="Profile picture">
+						</a>
+					</div>
+					<div class="chat">
+						<a href="">
+							<img src="/web/src/image/chat.svg" alt="chat">
+						</a>
+					</div>
+					<div class="notifications">
+						<a href="">
+							<img src="/web/src/image/notifications.svg" alt="notifs">
+						</a>
+					</div>
+				</div>
 			</div>
 		{{ else }}
 			<div class="unlogged-searchbar">
