Better trash button for post, minor improvement for the footer and the navbar.

--- a/web/static/style/components/comments.css
+++ b/web/static/style/components/comments.css
@@ -67,7 +67,7 @@
 }
 
 .comments .comment .reaction-section button {
-	padding:	0.2rem !important;
+	padding:	0.25rem 0.32rem !important;
 }
 
 .comments .comment .comment__infos {
