--- a/web/templates/pages/viewpost.html
+++ b/web/templates/pages/viewpost.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="/static/style/components/post.css">
 		<link rel="stylesheet" href="/static/style/components/comments.css">
 		<link rel="stylesheet" href="/static/style/components/reactions.css">
+		<link rel="stylesheet" href="/static/style/layout/footer.css">
 	</head>
 	<body>
 		<div class="bloc-page">
