--- a/web/static/style/components/reactions.css
+++ b/web/static/style/components/reactions.css
@@ -1,14 +1,14 @@
 .reaction-section {
 	display: flex;
 	gap: 10px;
-	margin-top: 10px;
+	margin-top:	0.5rem;
 }
 
 .reaction-section button {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	padding: 8px 12px;
+	padding:	0.5rem 0.65rem;
 	font-size: 14px;
 	gap: 2px;
 	border: none;
