--- a/web/static/style/layout/footer.css
+++ b/web/static/style/layout/footer.css
@@ -1,3 +1,5 @@
 footer {
-    justify-items: center;
+	display:			flex;
+	justify-content:	center;
+	border-top:			0.1rem solid rgba(0, 0, 0, 0.129);
 }
