--- a/web/static/style/layout/navbar.css
+++ b/web/static/style/layout/navbar.css
@@ -43,7 +43,7 @@
     display: none;
     flex-direction: column;
     align-items: center;
-    position: absolute; 
+    position: absolute;
     top: 100%;
     left: 0%;
     background-color: rgba(236, 230, 240, 1);
@@ -74,6 +74,7 @@
 .logout-button{
     display: flex;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 
 .logout-button button{
