--- a/web/templates/pages/history.html
+++ b/web/templates/pages/history.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="/static/style/main.css">
 		<link rel="stylesheet" href="/static/style/layout/header.css">
 		<link rel="stylesheet" href="/static/style/layout/navbar.css">
+		<link rel="stylesheet" href="/static/style/layout/footer.css">
 	</head>
 	<body>
 		{{ template "header" . }}
