--- a/web/templates/pages/login.html
+++ b/web/templates/pages/login.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/static/style/main.css">
 	<link rel="stylesheet" href="/static/style/pages/login.css">
+	<link rel="stylesheet" href="/static/style/layout/footer.css">
 </head>
 <body>
 	<div class="login-page">
